# course-wasm

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  export.js  index.html  package-lock.json  package.json
code_samples/three/: index.html
code_samples/wasm/: Readme.md
code_samples/wasm/1.hello-world/: index.html  index.js  index.wasm.map
code_samples/wasm/2.call-back/: index.js  index.wat
code_samples/wasm/2.passing-array/: index.js  main.c  readme.md
code_samples/wasm/3.memory-alloc-c/: index.js  index.wat  main.c  readme.md
code_samples/wasm/3.memory-alloc-js/: index.wasm  index.wat
code_samples/wasm/4.streaming-instantiate/: index.js  index.wat  readme.md  server.py
code_samples/wasm/5.call-back/: index.wasm  readme.md
code_samples/wasm/5.rust-example/: package-lock.json
src/: generate.js  main.c  main.cpp  main.js  three.js
src/optimizationSolver/: cost.cpp  cost.h  feasibilityChecker.cpp  feasibilityChecker.h  geometry.cpp  geometry.h  main.cpp  optimize.cpp  optimize.h  optimizer.js  solutionCandidate.cpp  solutionCandidate.h
src/optimizer/: main.c  main.wasm  optimizer.js
src/simple/: build.bat  build.sh  simple.c  simple.js  simple.wasm  simple.wasm.map  simple.wast
src/solver/: cost.cpp  cost.h  feasibilityChecker.cpp  feasibilityChecker.h  geometry.cpp  geometry.h  main.cpp  objective.cpp  objective.h  optimize.cpp  optimize.h  solutionCandidate.cpp  solutionCandidate.h  solver.js
src/visualize/: box.js  buffered.js  customShader.js  extrude.js  shaderMesh.js  visualize.js
utils/: build.js  server.js
